Finish lexer implementation

--- a/lox/Cargo.toml
+++ b/lox/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lexer = { path = "../lexer", version = "0.1" }
 clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6"
