--- a/lox/Cargo.toml
+++ b/lox/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 lexer = { path = "../lexer", version = "0.1" }
+parser = { path = "../parser", version = "0.1" }
 clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6"
