--- a/lox/Cargo.toml
+++ b/lox/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 lox_core = { path = "../core", version = "0.1" }
 lexer = { path = "../lexer", version = "0.1" }
 parser = { path = "../parser", version = "0.1" }
+interpreter = { path = "../interpreter", version = "0.1"}
 clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6"
