--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["core", "interpreter", "lexer", "lox", "parser"]
+members = ["core", "interpreter", "lexer", "lox", "parser", "resolver"]
 resolver = "2"
